--- a/rss/rssbridge_producer/rssbridge_producer_data/pyproject.toml
+++ b/rss/rssbridge_producer/rssbridge_producer_data/pyproject.toml
@@ -2,7 +2,7 @@
 name = "rssbridge-producer-data"
 version = "0.1.0"
 description = "A package for handling Avro schema data"
-authors = ["Your Name"]
+authors = ["Clemens Vasters"]
 license = "MIT"
 packages = [ { include = "rssbridge_producer_data", from="src" } ]
 
