--- a/.github/workflows/build_containers.yml
+++ b/.github/workflows/build_containers.yml
@@ -64,8 +64,11 @@ jobs:
         uses: docker/metadata-action@96383f45573cb7f253c731d3b3ab81c87ef81934
         with:
           images: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.dockerfile }}:${{ github.sha }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.dockerfile }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.dockerfile }}
+          tags: |
+            type=raw,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.dockerfile }},value=${{ github.sha }}
+            type=raw,name=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.dockerfile }},value=latest
+
       
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
