--- a/rss/rssbridge_producer/Makefile
+++ b/rss/rssbridge_producer/Makefile
@@ -1,11 +1,11 @@
 .PHONY: build install
 
 build:
-	@python scripts/build.py
+	pip install wheel
+	pip wheel -w whl ./rssbridge_producer_data ./rssbridge_producer_kafka_producer
 
-install:
-	poetry install --no-root --with dev -C ./rssbridge_producer_kafka_producer
-	pip install ./rssbridge_producer_kafka_producer
+install: build
+	pip install ./rssbridge_producer_data ./rssbridge_producer_kafka_producer
 
 test: install
 	pytest ./rssbridge_producer_kafka_producer/tests ./rssbridge_producer_data/tests
