--- a/pegelonline/pyproject.toml
+++ b/pegelonline/pyproject.toml
@@ -9,12 +9,14 @@ description = "A project to fetch data from PegelOnline API"
 authors = ["Clemens Vasters <clemensv@microsoft.com>"]
 
 [tool.poetry.dependencies]
+pegelonline_producer_data = {path = "pegelonline_producer/pegelonline_producer_data"}
+pegelonline_producer_kafka_producer = {path = "pegelonline_producer/pegelonline_producer_kafka_producer"}
 python = ">=3.8"
 requests = ">=2.32.3"
 confluent-kafka = ">=2.5.3"
 cloudevents = ">=1.11.0"
 dataclasses_json = ">=0.6.7"
-numpy = ">=2.1.1"
+
 
 [tool.poetry.dev-dependencies]
 pytest = ">=8.3.3"
