--- a/pegelonline/pyproject.toml
+++ b/pegelonline/pyproject.toml
@@ -24,5 +24,5 @@ pytest-cov = ">=5.0.0"
 testcontainers = ">=4.8.1"
 requests-mock = ">=1.12.1"
 
-[build-system.scripts]
+[tool.poetry.scripts]
 pegelonline = "pegelonline:main"
