--- a/rss/pyproject.toml
+++ b/rss/pyproject.toml
@@ -28,5 +28,5 @@ pytest-cov = ">=5.0.0"
 testcontainers = ">=4.8.1"
 requests-mock = ">=1.12.1"
 
-[build-system.scripts]
+[tool.poetry.scripts]
 rssbridge = "rssbridge:main"
