--- a/mode-s/pyproject.toml
+++ b/mode-s/pyproject.toml
@@ -16,7 +16,7 @@ requests = ">=2.32.3"
 aiohttp = ">=3.10.5"
 asyncio = ">=3.4.3"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.dev.dependencies]
 pytest = ">=8.3.3"
 flake8 = ">=7.1.1"
 pylint = ">=3.2.7"
@@ -25,7 +25,7 @@ testcontainers = ">=4.8.1"
 pytest-asyncio = ">=0.24.0"
 
 [tool.poetry.scripts]
-mode_s_kafka_bridge = "mode_s.mode_s:main"
+mode_s_kafka_bridge = "mode_s_kafka_bridge.mode_s:main"
 
 [build-system]
 requires = ["poetry-core>=1.9.0"]
