switch to orjson
Signed-off-by: Clemens Vasters <clemens@vasters.com>

--- a/mode-s/mode_s_producer/mode_s_producer_data/pyproject.toml
+++ b/mode-s/mode_s_producer/mode_s_producer_data/pyproject.toml
@@ -8,7 +8,7 @@ packages = [ { include = "mode_s_producer_data", from="src" } ]
 
 [tool.poetry.dependencies]
 python = "<4.0,>=3.10"
-dataclasses-json = "^0.6.7"
+orjson = "^3.10"
 
 [tool.poetry.dev-dependencies]
 pylint = "^3.2.3"
