--- a/noaa/pyproject.toml
+++ b/noaa/pyproject.toml
@@ -10,7 +10,7 @@ authors = ["Clemens Vasters <clemensv@microsoft.com>"]
 
 [tool.poetry.dependencies]
 
-python = ">=3.8"
+python = ">=3.10,<4.0"
 requests = ">=2.32.3"
 confluent-kafka = ">=2.5.3"
 cloudevents = ">=1.11.0"
