--- a/gtfs/pyproject.toml
+++ b/gtfs/pyproject.toml
@@ -19,6 +19,8 @@ dataclasses-json = ">=0.6.7"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=8.3.3"
+pytest-cov = ">=6.0.0"
+requests-mock = ">=1.12.1"
 flake8 = ">=7.1.1"
 pylint = ">=3.2.7"
 mypy = ">=1.11.2"
