--- a/.github/workflows/test-noaa.yml
+++ b/.github/workflows/test-noaa.yml
@@ -51,10 +51,10 @@ jobs:
         run: poetry install --no-interaction --no-ansi
 
       - name: Run unit tests
-        run: poetry run pytest tests/test_noaa_producer_unit.py -v --tb=short
+        run: poetry run pytest tests/test_noaa_unit.py -v --tb=short
 
       - name: Run integration tests
-        run: poetry run pytest tests/test_noaa_producer_integration.py -v --tb=short
+        run: poetry run pytest tests/test_noaa_integration.py -v --tb=short
 
       - name: Run all tests with coverage
         run: poetry run pytest tests/ -v --cov=noaa --cov-report=term-missing --cov-report=xml --cov-fail-under=30
