--- a/.github/workflows/test-usgs-iv.yml
+++ b/.github/workflows/test-usgs-iv.yml
@@ -51,10 +51,10 @@ jobs:
         run: poetry install --no-interaction --no-ansi
 
       - name: Run unit tests
-        run: poetry run pytest tests/test_usgs_iv_producer_unit.py -v --tb=short
+        run: poetry run pytest tests/test_usgs_unit.py -v --tb=short
 
       - name: Run integration tests
-        run: poetry run pytest tests/test_usgs_iv_producer_integration.py -v --tb=short
+        run: poetry run pytest tests/test_usgs_integration.py -v --tb=short
 
       - name: Run all tests with coverage
         run: poetry run pytest tests/ -v --cov=usgs_iv --cov-report=term-missing --cov-report=xml --cov-fail-under=30
