--- a/.github/workflows/test-noaa.yml
+++ b/.github/workflows/test-noaa.yml
@@ -56,8 +56,8 @@ jobs:
       - name: Run integration tests
         run: poetry run pytest tests/test_noaa_integration.py -v --tb=short
 
-      - name: Run all tests with coverage
-        run: poetry run pytest tests/ -v --cov=noaa --cov-report=term-missing --cov-report=xml --cov-fail-under=20
+      - name: Run all tests with coverage (excluding e2e)
+        run: poetry run pytest tests/ -v --cov=noaa --cov-report=term-missing --cov-report=xml --cov-fail-under=20 -m "not e2e"
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v4
